# HRI-ROBORREGOS

./: .gitignore  README.md  docker-compose.yml  ingest_pg.py  rag_pg.py  requirements.txt  simple_rag.py
kb/: kb_basketball.txt  kb_personal.txt
ros2_ws/: .gitignore
ros2_ws/src/hri_rag_ros/: CMakeLists.txt  package.xml  package.xml.bak  setup.cfg  setup.py
ros2_ws/src/hri_rag_ros/hri_rag_ros/: rag_service.py
ros2_ws/src/hri_rag_ros/scripts/: rag_service
